# catan_rl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  global_backup.txt  pyproject.toml  requirements.txt  run_game.py  test_env_integration.py  train_catan.py  training_progress.md
.cargo/: config.toml  config.toml.example
.claude/: settings.json
.claude/commands/: ablate.md  advise.md  audit.md  dev-loop.md  dev-plan.md  eval-harness.md  posture.md  review.md  train.md
.claude/veriloop/: commands.json  constitution.md  interview.json  veriloop-manifest.json
.claude/workflows/: catan-rl-v2-dev-loop.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
analysis/: diag_phase_timing.py
benchmarks/: README.md
benchmarks/results/: bench_phase1.csv  bench_phase1.json  bench_phase3_rust.csv  bench_phase3_rust.json  bench_phase4_pivot_rust.csv  bench_phase4_pivot_rust.json
catan/agents/: heuristic.py  random_ai.py
catan/engine/: board.py  broadcast.py  debug_board.py  game.py  geometry.py  player.py
catan/game_engine/: board.py  catanGame.py  debug_board.py  dice.py  gameView.py  heuristicAIPlayer.py  hexTile.py  modelState.py  player.py  tracker.py
catan/gui/: view.py
catan/rl/: debug_wrapper.py  distributions.py  env.py  hand_tracker.py  league.py  state.py
catan/rl_logic/: catan_gym_env.py
configs/: _base.yaml  bc.yaml  bootstrap_pointer_arch.yaml  eval_harness.yaml  exploiter_probe.yaml  exploiter_v6seed.yaml  exploiter_v6seed_long.yaml  phase0_baseline.yaml  phase0_fixed.yaml  phase1_full.yaml  phase1_no_advantage_norm.yaml  phase1_no_devcard_count.yaml  phase1_no_symmetry_aug.yaml  phase1_no_thermometer_drop.yaml  phase1_no_value_clip.yaml  phase2_belief_head.yaml  phase2_full.yaml  phase2_no_axial_pos.yaml  phase2_no_decoupled_value.yaml  phase2_no_film.yaml  phase2_no_transformer_recipe.yaml  phase3_exploiter_smoke.yaml  phase3_full.yaml  phase3_full_with_exploiter.yaml  phase3_no_latest_policy.yaml  phase3_no_nash_pruning.yaml  phase3_no_opp_id_emb.yaml  phase3_no_pfsp_hard.yaml  phase3_no_trueskill.yaml  phase4_full.yaml  phase4_no_graph.yaml  phase4_no_opp_action.yaml  phase4_no_recurrent_value.yaml  ppo_default.yaml  selfplay_pointer_arch.yaml  selfplay_promobar.yaml  selfplay_v10.yaml  selfplay_v11.yaml  selfplay_v8_cont.yaml  selfplay_v8_cont_resume.yaml
crates/catan_engine/: Cargo.toml
crates/catan_engine/src/: board.rs  dice.rs  env.rs  events.rs  hand_tracker.rs  lib.rs  masks.rs  obs.rs  rng.rs  spiral.rs  state.rs  vec_env.rs
crates/catan_engine/tests/: state_integration.rs
data/human/: color_survey.json  color_survey.md  color_survey_raw.json  glyph_validation.json  glyph_validation.md  pregate0_mass.json  pregate0_report.md  strength_manifest.json  strength_manifest.md  strength_manifest_validation.md  tier5_rerun_sample.jsonl  tier5_sample.jsonl
docs/: 1v1_rules.md  BROADCAST_HAND_TRACKING_PLAN.md  POLICY_OPPONENT_IMPLEMENTATION_PLAN.md  README.md  action_schema.md  architecture.md  io_schema.md  obs_schema.md
docs/decisions/: 0001-1v1-rules-invariant.md  0002-perfect-hand-tracking.md  0003-charlesworth-style-obs.md  0004-six-head-autoregressive-actions.md  0005-cpu-only-baseline.md  0006-src-layout-restructure.md  0007-phase-2-architecture-upgrades.md  0008-phase-3-self-play-diversity.md  0009-phase-4-search-and-recurrence.md
docs/plans/: board_grant_fix_plan.md  corpus_overnight_plan.md  cross_arch_eval_plan.md  file_layout_restructure.md  grant_fix_plan_v2.md  human_data_overnight_report.md  human_data_pipeline.md  rust_engine.md  rust_engine_actual_state.md  rust_engine_migration.md  selfplay_pointer_arch_plan.md  setup_parse_recovery_plan.md  setup_pretrain_plan.md  spec008_stageA_verdict.md  streaming_ingest_plan.md  superhuman_roadmap.md  tier5_report.md  tier5_rerun_report.md  v11_unbounded_plan.md  v2_design.md  v2_step3_bc.md  v2_step4_ppo.md  vlm_spike_report.md
docs/research/: SYNTHESIS.md  round_1_learning_algo.md  round_1_reward_eval.md  round_1_skeptic.md  round_1_state_action.md  round_2_disagreements.md  round_3_debate.md  round_4_resolution.md
docs/templates/: phase_review_prompt.md
logs/MaskablePPO_1/: events.out.tfevents.1767754873.Benjamins-MacBook-Pro-3.local.16009.0  events.out.tfevents.1767755064.Benjamins-MacBook-Pro-3.local.17008.0  events.out.tfevents.1767756358.Benjamins-MacBook-Pro-3.local.22144.0  events.out.tfevents.1767757504.Benjamins-MacBook-Pro-3.local.26652.0  events.out.tfevents.1767757796.Benjamins-MacBook-Pro-3.local.27877.0  events.out.tfevents.1767759195.Benjamins-MacBook-Pro-3.local.33534.0  events.out.tfevents.1767771233.Benjamins-MacBook-Pro-3.local.45827.0  events.out.tfevents.1767772862.Benjamins-MacBook-Pro-3.local.51866.0  events.out.tfevents.1767838443.Benjamins-MacBook-Pro-3.local.92150.0  events.out.tfevents.1767838944.Benjamins-MacBook-Pro-3.local.94316.0  events.out.tfevents.1767839011.Benjamins-MacBook-Pro-3.local.94788.0  (+19 more)
models/: league_stats.json
scripts/: analyze_trend.py  audit_heuristic_determinism.py  audit_heuristic_distribution.py  bc_to_checkpoint.py  bench_engine.py  bench_search_sims.py  bench_vec_env.py  benchmark_speedups.py  build_strength_manifest.py  color_survey.py  elo_ladder.py  eval_cross_arch.py  eval_harness.py  evaluate.py  export_topology.py  generate_bc_dataset.py  glyph_valset.py  gold_gate.py  label_setup.py  ladder_gate.py  merge_strength_shards.py  migrate_checkpoint.py  migrate_pointer_arch.py  mine_phantom.py  monitor_training.py  play.py  play_vs_model.py  play_vs_v8.py  pregate0.py  probe_equivariance.py  reclaim_disk.py  record_game.py  record_search_replay.py  render_strength_manifest_md.py  replay_viewer.py  reverify_ckpt524.py  run_exit_pilot.py  run_exploiter_gate.py  run_search_bakeoff.py  run_search_ladder.py  (+10 more)
scripts/dev/: collect_corpus.py  (+27 more)
tests/: conftest.py
(+701 files in other folders)
