[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "catan-rl"
version = "0.2.0"
description = "1v1 Settlers of Catan RL agent (Colonist.io ruleset) trained with custom PPO + League self-play"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Benjamin Li", email = "bbl35@cornell.edu" }]
keywords = ["reinforcement-learning", "ppo", "self-play", "catan"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.24",
  "torch>=2.0",
  "tensorboard>=2.14",
  "tqdm>=4.65",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
gui = ["pygame>=2.6"]
ratings = ["trueskill>=0.4"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.0",
  "types-PyYAML>=6.0",
]
notebooks = ["jupyter>=1.0", "matplotlib>=3.8"]

[project.urls]
Homepage = "https://github.com/benjaminli/catan_rl"

# Console-script entry points. ``pip install -e .`` (or
# ``maturin develop --release``) puts these on PATH. Per the
# senior SWE's Q4 decision the ``catan-rl-`` prefix matches the
# distribution name and avoids collisions with the popular
# ``catanatron`` 4-player Catan package on PyPI.
#
# ``catan-rl-eval`` is intentionally absent — the underlying
# ``EvaluationManager`` CLI scaffolding doesn't exist yet (only
# the ``catan_rl.eval.harness.EvalHarness`` library). Wire it
# once a ``catan_rl.cli.evaluate:main`` exists.
[project.scripts]
catan-rl-train         = "catan_rl.cli.train:main"
catan-rl-record        = "catan_rl.cli.record_game:main"
catan-rl-replay        = "catan_rl.replay.viewer.event_loop:main"
catan-rl-migrate-ckpt  = "catan_rl.cli.migrate_checkpoint:main"
catan-rl-bc-train      = "catan_rl.cli.train_bc:main"
catan-rl-bc-generate   = "catan_rl.cli.generate_bc_dataset:main"
catan-rl-label-setup   = "catan_rl.cli.label_setup:main"

# Maturin builds the native ``catan_engine`` Rust crate (under
# ``crates/catan_engine``) into a Python extension module AND ships
# the ``catan_rl`` Python package from ``src/`` in the same wheel.
# Pre-PR4 the project used hatchling + maturin side-by-side; they
# fought over the ``catan-rl`` distribution name (each backend's
# editable install uninstalled the other). Maturin as sole backend
# resolves the conflict per the audit in
# ``docs/plans/rust_engine_migration.md``.
#
# ``python-source = "src"`` tells maturin to walk ``src/`` for
# Python packages; both ``catan_rl`` and ``catan_engine`` (the
# maturin-managed extension namespace) live under it.
[tool.maturin]
manifest-path = "crates/catan_engine/Cargo.toml"
module-name = "catan_engine"
python-source = "src"
strip = true
# Opt into the ``extension-module`` cargo feature so PyO3 skips
# libpython linking (correct for a Python ext); ``cargo test``
# runs without this feature and links normally.
features = ["extension-module"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# Tolerate uppercase variable names common in ML code (X, Y, B, T, N).
ignore = ["E741", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "RUF001", "RUF002", "RUF003"]
"scripts/**" = ["E402", "F841", "RUF002", "RUF059", "SIM102"]
# The ``catan_rl.cli.*`` modules define a module-level ``REPO_ROOT``
# constant (used as argparse default for ``--data`` / ``--out`` /
# ``--config`` paths) between the imports — the comment + assignment
# can't be pushed below ``from catan_rl... import`` without making
# the defaults a function call. ``E402`` is the noise this creates.
"src/catan_rl/cli/**" = ["E402"]
# Legacy modules: not restructure-scope. Lint will be addressed alongside the
# Phase 0+ refactors that touch each file. The blanket ignores below mute the
# pre-existing violations so the new tooling pipeline can land green.
"src/catan_rl/engine/**" = ["E", "F", "B", "I", "SIM", "UP", "RUF"]
"src/catan_rl/agents/**" = ["E", "F", "B", "I", "SIM", "UP", "RUF"]
"src/catan_rl/gui/**" = ["E", "F", "B", "I", "SIM", "UP", "RUF"]
"src/catan_rl/viz/**" = ["E", "F", "B", "I", "SIM", "UP", "RUF"]
"src/catan_rl/models/**" = ["E", "F", "B", "I", "SIM", "UP", "RUF"]
"src/catan_rl/env/**" = ["E", "F", "B", "I", "SIM", "UP", "RUF"]
"src/catan_rl/setup_phase/**" = ["E", "F", "B", "I", "SIM", "UP", "RUF"]
# Restructure-scope modules: keep stricter, but ignore the few pre-existing
# violations that only became visible because we drew the boundary here.
"src/catan_rl/algorithms/common/rollout_buffer.py" = ["RUF013"]
"src/catan_rl/algorithms/common/gae.py" = ["RUF002"]  # Greek/minus in math docstring
"src/catan_rl/algorithms/ppo/trainer.py" = ["B007", "SIM102", "RUF001", "RUF002", "RUF003"]
"src/catan_rl/eval/evaluation_manager.py" = ["E", "B023", "RUF059"]
"src/catan_rl/eval/rules_invariants.py" = ["RUF005"]  # tuple concatenation is intentional
"src/catan_rl/eval/champion_bench.py" = ["RUF046"]  # int(round(...)) is intentional
"src/catan_rl/selfplay/game_manager.py" = ["B904", "B905"]
"src/catan_rl/selfplay/league.py" = ["SIM108", "RUF003"]
# Phase 1.5 augmentation: math docstrings carry proper Unicode (×, −, ↔, →);
# the boardGraph iteration legitimately needs the key for documentation; one
# axial-rotation comment exceeds 100 chars; ``B`` is a documented batch-size
# local in dihedral.py.
"src/catan_rl/augmentation/**" = ["RUF002", "B007", "E501", "RUF059"]
"scripts/eval_harness.py" = ["RUF046", "E402", "F841", "RUF059", "SIM102"]
"scripts/migrate_checkpoint.py" = ["E501", "E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
# Strict mode is the goal; loosen during transition so the move PR is reviewable.
strict = false

# Pre-existing legacy modules: ignore typing errors until each is touched by a
# Phase 0+ refactor that can address them properly. Tracked in the roadmap.
[[tool.mypy.overrides]]
module = [
  "catan_rl.engine.*",
  "catan_rl.agents.*",
  "catan_rl.gui.*",
  "catan_rl.viz.*",
  "catan_rl.models.*",
  "catan_rl.env.*",
  "catan_rl.setup_phase.*",
  "catan_rl.algorithms.common.rollout_buffer",
  "catan_rl.algorithms.ppo.trainer",
  "catan_rl.algorithms.ppo.arguments",
  "catan_rl.selfplay.game_manager",
  "catan_rl.selfplay.ratings",
  "catan_rl.eval.rules_invariants",
  "catan_rl.eval.evaluation_manager",
  "catan_rl.eval.champion_bench",
  "catan_rl.eval.exploitability",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
  "slow: tests that take >5s",
  "integration: smoke training tests that run a full env loop",
  "gpu: tests requiring CUDA",
]
filterwarnings = [
  "ignore::DeprecationWarning:pygame.*",
  "ignore::UserWarning:torch.nn.modules.transformer.*",
]

[tool.coverage.run]
source = ["src/catan_rl"]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
